# api/swagger/paths/service.json
@@ -36,6 +36,49 @@
       }
     }
   },
+  "UpdateService": {
+    "tags": [
+      "Service"
+    ],
+    "description": "Creates a service",
+    "operationId": "createService",
+    "security": [
+      {
+        "Authorization": []
+      }
+    ],
+    "parameters": [
+      {
+        "in": "body",
+        "name": "body",
+        "description": "Updates the service passed in the body",
+        "required": true,
+        "schema": {
+          "$ref": "../definitions/service.json#/UpdateService"
+        }
+      }
+    ],
+    "responses": {
+      "200": {
+        "description": "Success",
+        "schema": {
+          "$ref": "../definitions/service.json#/CreateServiceResponse"
+        }
+      },
+      "404": {
+        "description": "Service not found",
+        "schema": {
+          "$ref": "../definitions/error.json#/ErrorResponse"
+        }
+      },
+      "500": {
+        "description": "Error",
+        "schema": {
+          "$ref": "../definitions/error.json#/ErrorResponse"
+        }
+      }
+    }
+  },
   "GetServiceByProvider": {
     "tags": [
       "Service"
@@ -50,7 +93,7 @@
       }
     ],
     "description": "Retrieves an array of services offered by an active provider",
-    "operationId": "findByProvider",
+    "operationId": "findServiceByProvider",
     "responses": {
       "200": {
         "description": "Success",
